feat:Não ta funfando direito, commitei para salvar
